[package]
name = "aarch64"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
gdb = ["gdbstub", "gdbstub_arch", "arch/gdb", "hypervisor/gdb"]
swap = ["swap/enable"]

[dependencies]
arch = { path = "../arch" }
cros_fdt = { path = "../cros_fdt" }
data_model = { path = "../common/data_model" }
devices = { path = "../devices" }
gdbstub = { version = "0.7.0", optional = true }
gdbstub_arch = { version = "0.3.0", optional = true }
hypervisor = { path = "../hypervisor" }
jail = { path = "../jail" }
kernel_cmdline = { path = "../kernel_cmdline" }
kernel_loader = { path = "../kernel_loader" }
libc = "*"
memoffset = "0.6"
rand = "0.8"
remain = "*"
resources = { path = "../resources" }
swap = { path = "../swap" }
sync = { path = "../common/sync" }
base = { path = "../base" }
thiserror = "*"
vm_control = { path = "../vm_control" }
vm_memory = { path = "../vm_memory" }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"
