[package]
name = "aarch64"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
gdb = ["gdbstub", "gdbstub_arch", "arch/gdb"]
swap = ["swap/enable"]

[dependencies]
aarch64_sys_reg = { workspace = true }
anyhow = "1"
arch = { workspace = true }
cros_fdt = { workspace = true }
devices = { workspace = true }
gdbstub = { version = "0.7.0", optional = true }
gdbstub_arch = { version = "0.3.0", optional = true }
hypervisor = { workspace = true }
jail = { path = "../jail" }
kernel_cmdline = { workspace = true }
kernel_loader = { workspace = true }
libc = { workspace = true }
rand = "0.8"
remain = "0.2"
resources = { workspace = true }
swap = { workspace = true }
sync = { workspace = true }
base = { workspace = true }
thiserror = "1"
vm_control = { workspace = true }
vm_memory = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"
