[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
power-monitor-powerd = ["power_monitor/powerd"]
gdb = ["gdbstub", "gdbstub_arch"]
direct = []

[dependencies]
acpi_tables = { path = "../acpi_tables" }
anyhow = "*"
base = { path = "../base" }
cfg-if = "1.0.0"
cros_fdt = { path = "../cros_fdt" }
devices = { path = "../devices" }
gdbstub = { version = "0.6.3", optional = true }
gdbstub_arch = { version = "0.2.4", optional = true }
hypervisor = { path = "../hypervisor" }
kernel_cmdline = { path = "../kernel_cmdline" }
libc = "*"
resources = { path = "../resources" }
remain = "*"
serde = { version = "*", features = [ "derive"] }
serde_keyvalue = { path = "../serde_keyvalue", features = ["argh_derive"] }
sync = { path = "../common/sync" }
thiserror = "1.0.20"
vm_control = { path = "../vm_control" }
vm_memory = { path = "../vm_memory" }

[target.'cfg(unix)'.dependencies]
minijail = "*" # provided by ebuild
power_monitor = { path = "../power_monitor" }

[target.'cfg(windows)'.dependencies]
winapi = "*"
