[package]
name = "arch"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
power-monitor-powerd = ["power_monitor/powerd"]
gdb = ["gdbstub", "gdbstub_arch"]
trace_marker = ["cros_tracing/trace_marker"]
seccomp_trace = []
swap = ["swap/enable"]

[dependencies]
acpi_tables = { workspace = true }
anyhow = "1"
base = { workspace = true }
cfg-if = "1.0.0"
cros_fdt = { workspace = true }
cros_tracing = { workspace = true }
devices = { workspace = true }
gdbstub = { version = "0.7.0", optional = true }
gdbstub_arch = { version = "0.3.0", optional = true }
hypervisor = { workspace = true }
jail = { path = "../jail" }
kernel_cmdline = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
resources = { workspace = true }
remain = "0.2"
serde = { version = "1", features = [ "derive"] }
serde_json = { version = "1" }
serde_keyvalue = { workspace = true, features = ["argh_derive"] }
swap = { workspace = true }
sync = { workspace = true }
thiserror = "1.0.20"
uuid = { version = "1", features = ["v4", "serde"] }
vm_control = { workspace = true }
vm_memory = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"
power_monitor = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
