[package]
name = "arch"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
power-monitor-powerd = ["power_monitor/powerd"]
gdb = ["gdbstub", "gdbstub_arch"]
trace_marker = ["cros_tracing/trace_marker"]
seccomp_trace = []
swap = ["swap/enable"]

[dependencies]
acpi_tables = { workspace = true }
anyhow = { workspace = true }
base = { workspace = true }
cfg-if = { workspace = true }
cros_fdt = { workspace = true }
cros_tracing = { workspace = true }
devices = { workspace = true }
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }
hypervisor = { workspace = true }
jail = { workspace = true }
kernel_cmdline = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
resources = { workspace = true }
remain = { workspace = true }
serde = { workspace = true, features = [ "derive"] }
serde_json = { workspace = true }
serde_keyvalue = { workspace = true, features = ["argh_derive"] }
swap = { workspace = true }
sync = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
vm_control = { workspace = true }
vm_memory = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"
power_monitor = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
