[package]
name = "async_core"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
libc = "*"
cros_async = { path = "../cros_async" }
sys_util = { path = "../sys_util" }
syscall_defines = { path = "../syscall_defines" }

[dependencies.futures]
version = "*"
default-features = false
