[package]
name = "audio_streams_conformance_test"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

[features]
audio_cras = ["dep:libcras"]
chromeos = ["audio_cras"]

[dependencies]
argh = { workspace = true }
audio_streams = { workspace = true }
cfg-if = { workspace = true }
cros_async = { workspace = true }
libcras = { version = "*", optional = true }
remain = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
