[package]
name = "base"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

# The process tests will use fork, which requires a custom test harness to enforce single threaded
# execution.
[[test]]
name = "process"
path = "tests/process.rs"
harness = false

[features]
proto_tube = ["protobuf"]
seccomp_trace = []

[dependencies]
audio_streams = { path = "../common/audio_streams" } # provided by ebuild
base_event_token_derive = { path = "base_event_token_derive" }
sync = { path = "../common/sync" } # provided by ebuild

cfg-if = "1"
chrono = { version = "0.4.34", features = ["now"], default-features = false }
env_logger = { version = "0.9.0", default-features = false }
libc = "0.2"
log = "0.4"
once_cell = "1.7"
protobuf = { version = "3.2", optional = true }
remain = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
smallvec = "1.6.1"
thiserror = "1.0.20"
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
libtest-mimic = "0.6"
protos = { path = "../protos", features = ["composite-disk"] }
tempfile = "3"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
minijail = "*"

[target.'cfg(windows)'.dependencies]
futures = { version = "0.3" }
protobuf = "3.2"
rand = "0.8"
winapi = "0.3"
win_util = { path = "../win_util"}
