[package]
name = "base"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
proto_tube = ["protobuf"]
seccomp_trace = []

[dependencies]
audio_streams = { workspace = true }
base_event_token_derive = { path = "base_event_token_derive" }
sync = { workspace = true }

cfg-if = { workspace = true }
chrono = { version = "0.4.34", features = ["now"], default-features = false }
env_logger = { version = "0.9.0", default-features = false }
libc = { workspace = true }
log = "0.4"
protobuf = { version = "3.2", optional = true }
remain = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
smallvec = "1.6.1"
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8.13", features = ["derive"] }

[dev-dependencies]
protos = { workspace = true, features = ["composite-disk"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
futures = { version = "0.3" }
protobuf = "3.2"
rand = { workspace = true }
winapi = "0.3"
win_util = { path = "../win_util"}

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.1"
