[package]
name = "broker_ipc"
authors = ["The ChromiumOS Authors"]
version = "0.1.0"
edition = "2021"

[features]
crash-report = ["crash_report", "broker_ipc_product/crash-report"]
process-invariants = ["broker_ipc_product/process-invariants"]

[dependencies]
anyhow = "1"
base = { workspace = true }
crash_report = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
metrics = { workspace = true }
broker_ipc_product = { path = "../vendor/generic/broker_ipc/" }
