[package]
name = "crash_report"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
anyhow = "1.0.32"
serde = "*"

[target.'cfg(windows)'.dependencies]
win_util = { path = "../win_util"}

