[package]
name = "cros_async"
version = "0.1.1"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1.36"
async-task = "4"
cfg-if = "1.0.0"
intrusive-collections = "0.9"
libc = "0.2"
once_cell = "1.7.2"
paste = "1.0"
pin-utils = "0.1.0-alpha.4"
remain = "0.2"
slab = "0.4"
sync = { path = "../common/sync" } # provided by ebuild
base = { path = "../base" } # provided by ebuild
thiserror = "1.0.20"
audio_streams = { path = "../common/audio_streams" } # provided by ebuild
anyhow = "1"
serde = "1"
serde_keyvalue = { path = "../serde_keyvalue", features = ["argh_derive"] } # provided by ebuild
static_assertions = "1.1"
tokio = { workspace = true, optional = true }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
io_uring = { path = "../io_uring" } # provided by ebuild

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
win_util = { path = "../win_util" }
smallvec = "1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc"]

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
tempfile = "3"
