[package]
name = "cros_tracing"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "trace_marker"
path = "tests/trace_marker.rs"
harness = false
required-features = ["trace_marker"]

[features]
trace_marker = ["once_cell"]
perfetto = ['dep:perfetto', "once_cell", "sync"]

[dependencies]
anyhow = "*"
base = "*"
cfg-if = "1.0.0"
cros_tracing_types = { path = "../cros_tracing_types" }
once_cell = { version = "1.7", optional = true }
perfetto = { path = "../perfetto", optional = true }
sync = { path = "../common/sync", optional = true }

[dev-dependencies]
libtest-mimic = "0.6"
