[package]
name = "cros_tracing"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "trace_marker"
path = "tests/trace_marker.rs"
harness = false
required-features = ["trace_marker"]

[features]
trace_marker = []
perfetto = ["dep:perfetto"]

[dependencies]
anyhow = "1"
base = { path = "../base" }
cfg-if = "1.0.0"
cros_tracing_types = { path = "../cros_tracing_types" }
perfetto = { path = "../perfetto", optional = true }
sync = { path = "../common/sync" }

[dev-dependencies]
libtest-mimic = "0.6"
