[package]
name = "crosvm-fuzz"
version = "0.0.1"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
cros_fuzz = "*"
data_model = { path = "../common/data_model" }
devices = { path = "../devices" }
disk = { path = "../disk" }
fuse = { path = "../fuse" }
hypervisor = { path = "../hypervisor" }
kernel_loader = { path = "../kernel_loader" }
libc = "*"
rand = "0.6"
base = { path = "../base" }
tempfile = "3"
usb_util = { path = "../usb_util" }
vm_memory = { path = "../vm_memory" }

[[bin]]
name = "crosvm_block_fuzzer"
path = "block_fuzzer.rs"

[[bin]]
name = "crosvm_fs_server_fuzzer"
path = "fs_server_fuzzer.rs"

[[bin]]
name = "crosvm_qcow_fuzzer"
path = "qcow_fuzzer.rs"

[[bin]]
name = "crosvm_usb_descriptor_fuzzer"
path = "usb_descriptor_fuzzer.rs"

[[bin]]
name = "crosvm_virtqueue_fuzzer"
path = "virtqueue_fuzzer.rs"

[[bin]]
name = "crosvm_zimage_fuzzer"
path = "zimage_fuzzer.rs"

