[package]
name = "crosvm-fuzz"
version = "0.0.1"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
data_model = { path = "../common/data_model" }
devices = { path = "../devices" }
disk = { path = "../disk" }
fuse = { path = "../fuse" }
hypervisor = { path = "../hypervisor" }
kernel_loader = { path = "../kernel_loader" }
libc = "*"
rand = "0.8"
base = { path = "../base" }
tempfile = "3"
usb_util = { path = "../usb_util" }
vm_memory = { path = "../vm_memory" }
p9 = { path = "../common/p9" }
rand_core = {version = "0.6", features = ["std"]}
cfg-if = "1.0"

[target.'cfg(fuzzing)'.dependencies]
libfuzzer-sys = "=0.4.4"

[features]
default = ["disk/qcow"]

[[bin]]
name = "crosvm_block_fuzzer"
path = "block_fuzzer.rs"

[[bin]]
name = "crosvm_fs_server_fuzzer"
path = "fs_server_fuzzer.rs"

[[bin]]
name = "crosvm_qcow_fuzzer"
path = "qcow_fuzzer.rs"

[[bin]]
name = "crosvm_usb_descriptor_fuzzer"
path = "usb_descriptor_fuzzer.rs"

[[bin]]
name = "crosvm_virtqueue_fuzzer"
path = "virtqueue_fuzzer.rs"

[[bin]]
name = "crosvm_zimage_fuzzer"
path = "zimage_fuzzer.rs"

[[bin]]
name = "crosvm_p9_tframe_fuzzer"
path = "p9_tframe_fuzzer.rs"

