[package]
name = "crosvm_control"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[features]
audio = ["vm_control/audio"]
gpu = ["vm_control/gpu"]
pci-hotplug = ["vm_control/pci-hotplug"]
registered_events = ["vm_control/registered_events"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
balloon_control = { workspace = true }
base = { workspace = true }
libc = { workspace = true }
swap = { path = "../swap", default-features = false }
vm_control = { workspace = true, features = [ "balloon" ] }

[build-dependencies]
anyhow = { workspace = true }
cbindgen = "0.24.3"
cc = "1"
tempfile = "3"
